--- a/configs/r619ac-lean.config
+++ b/configs/r619ac-lean.config
@@ -1,6 +1,10 @@
 CONFIG_TARGET_ipq40xx=y
-CONFIG_TARGET_ipq40xx_DEVICE_p2w_r619ac=y
+CONFIG_TARGET_ipq40xx_DEVICE_p2w_r619ac-128m=y
 CONFIG_TARGET_BOARD="ipq40xx"
+CONFIG_BATMAN_ADV_BATMAN_V=y
+CONFIG_BATMAN_ADV_BLA=y
+CONFIG_BATMAN_ADV_DAT=y
+CONFIG_BATMAN_ADV_MCAST=y
 CONFIG_LIBCURL_COOKIES=y
 CONFIG_LIBCURL_FILE=y
 CONFIG_LIBCURL_FTP=y
@@ -12,11 +16,14 @@ CONFIG_LIBSODIUM_MINIMAL=y
 # CONFIG_PACKAGE_UnblockNeteaseMusicGo is not set
 # CONFIG_PACKAGE_adbyby is not set
 CONFIG_PACKAGE_bash=y
+CONFIG_PACKAGE_batctl-default=y
 CONFIG_PACKAGE_blkid=y
 CONFIG_PACKAGE_boost=y
 CONFIG_PACKAGE_boost-program_options=y
 CONFIG_PACKAGE_boost-system=y
 CONFIG_PACKAGE_btrfs-progs=y
+CONFIG_PACKAGE_ca-bundle=y
+CONFIG_PACKAGE_ca-certificates=y
 CONFIG_PACKAGE_chinadns-ng=y
 CONFIG_PACKAGE_coreutils=y
 CONFIG_PACKAGE_coreutils-base64=y
@@ -24,15 +31,17 @@ CONFIG_PACKAGE_coreutils-nohup=y
 CONFIG_PACKAGE_curl=y
 CONFIG_PACKAGE_e2fsprogs=y
 # CONFIG_PACKAGE_etherwake is not set
+CONFIG_PACKAGE_ip-full=y
+# CONFIG_PACKAGE_ip-tiny is not set
 CONFIG_PACKAGE_iptables-mod-extra=y
 # CONFIG_PACKAGE_iptables-mod-ipsec is not set
 CONFIG_PACKAGE_iptables-mod-tproxy=y
 CONFIG_PACKAGE_kcptun-client=y
+CONFIG_PACKAGE_kmod-batman-adv=y
 # CONFIG_PACKAGE_kmod-crypto-cbc is not set
 # CONFIG_PACKAGE_kmod-crypto-deflate is not set
 # CONFIG_PACKAGE_kmod-crypto-des is not set
 # CONFIG_PACKAGE_kmod-crypto-echainiv is not set
-# CONFIG_PACKAGE_kmod-crypto-hmac is not set
 # CONFIG_PACKAGE_kmod-crypto-md5 is not set
 # CONFIG_PACKAGE_kmod-fast-classifier is not set
 CONFIG_PACKAGE_kmod-fs-btrfs=y
@@ -59,6 +68,7 @@ CONFIG_PACKAGE_kmod-nf-reject6=y
 # CONFIG_PACKAGE_kmod-shortcut-fe is not set
 CONFIG_PACKAGE_libatomic=y
 CONFIG_PACKAGE_libattr=y
+CONFIG_PACKAGE_libbpf=y
 CONFIG_PACKAGE_libcap=y
 CONFIG_PACKAGE_libcap-bin=y
 CONFIG_PACKAGE_libcap-bin-capsh-shell="/bin/sh"
@@ -66,6 +76,7 @@ CONFIG_PACKAGE_libcares=y
 CONFIG_PACKAGE_libcomerr=y
 CONFIG_PACKAGE_libcurl=y
 CONFIG_PACKAGE_libdb47=y
+CONFIG_PACKAGE_libelf=y
 CONFIG_PACKAGE_libev=y
 CONFIG_PACKAGE_libevent2=y
 CONFIG_PACKAGE_libext2fs=y
@@ -75,6 +86,7 @@ CONFIG_PACKAGE_libmbedtls=y
 # CONFIG_PACKAGE_libminiupnpc is not set
 CONFIG_PACKAGE_libmount=y
 # CONFIG_PACKAGE_libnatpmp is not set
+CONFIG_PACKAGE_libpcre=y
 CONFIG_PACKAGE_libreadline=y
 CONFIG_PACKAGE_libruby=y
 CONFIG_PACKAGE_libsmartcols=y
@@ -99,9 +111,9 @@ CONFIG_PACKAGE_luci-app-diskman_INCLUDE_kmod_md_linear=y
 CONFIG_PACKAGE_luci-app-diskman_INCLUDE_kmod_md_raid456=y
 CONFIG_PACKAGE_luci-app-diskman_INCLUDE_lsblk=y
 CONFIG_PACKAGE_luci-app-diskman_INCLUDE_mdadm=y
+CONFIG_PACKAGE_luci-app-easymesh=y
 CONFIG_PACKAGE_luci-app-flowoffload=y
 # CONFIG_PACKAGE_luci-app-ipsec-vpnd is not set
-CONFIG_PACKAGE_luci-app-netspeedtest=y
 CONFIG_PACKAGE_luci-app-openclash=y
 # CONFIG_PACKAGE_luci-app-sfe is not set
 CONFIG_PACKAGE_luci-app-ttyd=y
@@ -110,8 +122,8 @@ CONFIG_PACKAGE_luci-app-ttyd=y
 # CONFIG_PACKAGE_luci-app-vsftpd is not set
 # CONFIG_PACKAGE_luci-app-wol is not set
 # CONFIG_PACKAGE_luci-app-zerotier is not set
+CONFIG_PACKAGE_luci-i18n-easymesh-zh-cn=y
 CONFIG_PACKAGE_luci-i18n-flowoffload-zh-cn=y
-CONFIG_PACKAGE_luci-i18n-netspeedtest-zh-cn=y
 CONFIG_PACKAGE_luci-i18n-ttyd-zh-cn=y
 CONFIG_PACKAGE_luci-theme-argon=y
 CONFIG_PACKAGE_luci-theme-edge=y
@@ -153,10 +165,11 @@ CONFIG_PACKAGE_v2ray-plugin=y
 # CONFIG_PACKAGE_vlmcsd is not set
 # CONFIG_PACKAGE_vsftpd-alt is not set
 # CONFIG_PACKAGE_wol is not set
+CONFIG_PACKAGE_wpad=y
 CONFIG_PACKAGE_xray-core=y
 # CONFIG_PACKAGE_zerotier is not set
-CONFIG_PACKAGE_zsh=y
 CONFIG_PARTED_READLINE=y
+CONFIG_PCRE_JIT_ENABLED=y
 CONFIG_TROJAN_GO_COMPRESS_UPX=y
 CONFIG_XRAY_CORE_COMPRESS_UPX=y
 CONFIG_boost-compile-visibility-hidden=y
